--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,13 @@ li {
 }
 
 
-
+.MovieZone{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  height: 100vh;
+  width: 100%;
+  overflow-y: scroll;
+}
 
 
 
